--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,10 @@ env:
   app_name:         "redash" # Will be used as working directory must corresponed to the cloned repository name
   tag_new_version:  ${GITHUB_SHA} # GitHub Variable storing commit's message
   enable_sonar:     true # True for repo code scanning
-  project_id:       "${{ secrets.PROJECT_ID }}" #Enter GCP project ID
+  project_id:       "terraform-project-kozak" #Enter GCP project ID
   gcp_repo_name:    "team6-redash-docker" # Google Artifact repository name
-
+  sonar_cloud_org:  "team6-project" # Add SonarCloud Organization name
+  sonar_cloud_proj: "team6-project_redash" # Add SonaCloud Project name
 
 # This is a basic workflow to help you get started with Actions
 
@@ -42,6 +43,20 @@ jobs:
           echo "If the cloning was successful a directory with repo name will be pressent below: "
           ls
       
+      - name: SonarCloud Scan
+        if: ${{ env.enable_sonar }} == "true"  # makes it optional
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
+        with:
+          projectBaseDir: ${{ env.app_name }}
+          args: >
+            -Dsonar.organization=${{ env.sonar_cloud_org }}
+            -Dsonar.projectKey=${{ env.sonar_cloud_proj }}
+            -Dsonar.verbose=true
+
+
       - name: Build the docker Image
         working-directory: ${{ env.app_name }}
         run: |
