--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ env:
   app_name:         "redash" # Will be used as working directory must corresponed to the cloned repository name
   tag_new_version:  ${GITHUB_SHA} # GitHub Variable storing commit's message
   enable_sonar:     true # True for repo code scanning
-  project_id:       "terraform-project-kozak" #Enter GCP project ID
+  project_id:       "tidy-access-377100" #Enter GCP project ID
   gcp_repo_name:    "team6-redash-docker" # Google Artifact repository name
   sonar_cloud_org:  "MaryDO22" # Add SonarCloud Organization name
   sonar_cloud_proj: "project-scan" # Add SonaCloud Project name
